<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/buttonEditJobSubmitChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_green_light"
        android:onClick="postChanges"
        android:text="@string/post_changes"
        android:visibility="visible"
        app:bootstrapBrand="primary"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:roundedCorners="true"
        app:showOutline="false"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/etEditJobTitle"
        android:layout_alignStart="@+id/etEditJobTitle"
        android:layout_alignRight="@+id/etEditJobTitle"
        android:layout_alignEnd="@+id/etEditJobTitle"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/etEditJobDescription"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tvEditJobTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etEditJobTitle"
        android:layout_alignLeft="@+id/etEditJobTitle"
        android:layout_alignStart="@+id/etEditJobTitle"
        android:text="@string/title"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/etEditJobTitle"
        android:layout_marginRight="42dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/tvEditJobHeader"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etEditJobTitle"
        android:hint="@string/job_title"
        android:layout_above="@+id/tvPostJobLocationLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/tvEditJobHeader"
        android:layout_marginRight="55dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/etEditJobDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonEditJobSubmitChanges"
        android:layout_alignEnd="@+id/buttonEditJobSubmitChanges"
        android:layout_alignRight="@+id/buttonEditJobSubmitChanges"
        android:ems="10"
        android:hint="@string/provide_a_detailed_description_of_the_job"
        android:inputType="textMultiLine"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/etEditJobLocation"
        android:layout_marginRight="55dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tvPostJobDescriptionLabel"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/tvPostJobDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etEditJobDescription"
        android:layout_alignLeft="@+id/etEditJobLocation"
        android:layout_alignStart="@+id/etEditJobLocation"
        android:text="@string/description"
        android:textSize="18sp"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/tvPostJobLocationLabel"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tvPostJobLocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="18sp"
        android:layout_above="@+id/etEditJobLocation"
        android:layout_alignLeft="@+id/etEditJobLocation"
        android:layout_alignStart="@+id/etEditJobLocation"
        app:layout_constraintRight_toLeftOf="@+id/etEditJobLocation"
        android:layout_marginRight="7dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/tvEditJobTitleLabel"
        app:layout_constraintHorizontal_bias="0.275" />

    <EditText
        android:id="@+id/etEditJobLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvPostJobDescriptionLabel"
        android:layout_alignLeft="@+id/etEditJobTitle"
        android:layout_alignStart="@+id/etEditJobTitle"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/etEditJobTitle"
        android:layout_marginRight="55dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tvEditJobHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/edit_job_post"
        android:textColor="@android:color/holo_purple"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="89dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>