<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.lawnscape.fragments.PostJobFragment">

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    tools:layout_constraintTop_creator="1"
    tools:layout_constraintBottom_creator="1"
    android:layout_marginStart="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginTop="8dp"
    tools:layout_constraintLeft_creator="1"
    android:layout_marginBottom="8dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginLeft="8dp"
    app:layout_constraintVertical_bias="1.0">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">

        <ImageButton
            android:id="@+id/ivPostJobUploadPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/add_job_plus_icon"
            tools:ignore="ContentDescription"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            tools:layout_editor_absoluteX="8dp"
            android:layout_marginTop="49dp"
            app:layout_constraintTop_toBottomOf="@+id/tvCategoryLabel" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btnPostJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tvPostJobDescriptionLabel"
            android:layout_toRightOf="@+id/tvPostJobDescriptionLabel"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/post_job"
            android:visibility="visible"
            app:bootstrapBrand="primary"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false"
            android:layout_marginStart="109dp"
            android:layout_marginEnd="8dp"
            tools:layout_editor_absoluteY="437dp"
            tools:layout_editor_absoluteX="127dp" />

        <TextView
            android:id="@+id/tvPostJoTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignLeft="@+id/tvPostJobLocationLabel"
            android:layout_alignStart="@+id/tvPostJobLocationLabel"
            android:layout_below="@+id/tvPostJobHeader"
            android:text="@string/title"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="6dp"
            tools:layout_editor_absoluteY="16dp"
            tools:layout_editor_absoluteX="14dp" />

        <EditText
            android:id="@+id/etPostJobTitle"
            android:layout_width="235dp"
            android:layout_height="47dp"
            android:layout_alignLeft="@+id/etPostJobLocation"
            android:layout_alignStart="@+id/etPostJobLocation"
            android:layout_alignTop="@+id/tvPostJoTitleLabel"
            android:ems="10"
            android:hint="@string/job_title"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteY="1dp"
            tools:layout_editor_absoluteX="88dp" />

        <EditText
            android:id="@+id/etPostJobDescription"
            android:layout_width="235dp"
            android:layout_height="67dp"
            android:layout_alignLeft="@+id/etPostJobLocation"
            android:layout_alignStart="@+id/etPostJobLocation"
            android:layout_below="@+id/etPostJobLocation"
            android:ems="10"
            android:hint="@string/provide_a_detailed_description_of_the_job"
            android:inputType="textMultiLine"
            tools:layout_editor_absoluteY="113dp"
            tools:layout_editor_absoluteX="88dp" />

        <TextView
            android:id="@+id/tvPostJobLocationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPostJobTitle"
            android:text="@string/Location_colon"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="87dp"
            tools:layout_editor_absoluteX="8dp" />

        <EditText
            android:id="@+id/etPostJobLocation"
            android:layout_width="235dp"
            android:layout_height="47dp"
            android:layout_alignBaseline="@+id/tvPostJobLocationLabel"
            android:layout_alignBottom="@+id/tvPostJobLocationLabel"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteY="56dp"
            tools:layout_editor_absoluteX="88dp" />

        <TextView
            android:id="@+id/tvPostJobDescriptionLabel"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvPostJobLocationLabel"
            android:layout_alignStart="@+id/tvPostJobLocationLabel"
            android:layout_alignTop="@+id/etPostJobDescription"
            android:text="@string/description"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="140dp"
            tools:layout_editor_absoluteX="8dp" />

        <TextView
            android:id="@+id/tvCategoryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="204dp"
            tools:layout_editor_absoluteX="8dp" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="235dp"
            android:layout_height="47dp"
            android:entries="@array/category_arrays"
            android:prompt="@string/category_prompt"
            tools:layout_editor_absoluteY="188dp"
            tools:layout_editor_absoluteX="88dp" />

        <GridView
            android:id="@+id/gvPhotoUploads"
            android:layout_width="235dp"
            android:layout_height="191dp"
            android:layout_marginEnd="24dp"
            tools:layout_editor_absoluteY="227dp"
            tools:layout_editor_absoluteX="88dp">

        </GridView>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="8dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>