<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/tvEditProfileNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_toLeftOf="@+id/etEditProfileName"
        android:layout_toStartOf="@+id/etEditProfileName"
        android:text="@string/name"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/etEditProfileName"
        tools:text="Name"
        app:layout_constraintHorizontal_bias="0.866"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="-153dp"
        app:layout_constraintTop_toBottomOf="@+id/ivEditProfile" />

    <EditText
        android:id="@+id/etEditProfileName"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignBaseline="@+id/tvEditProfileNameLabel"
        android:layout_alignBottom="@+id/tvEditProfileNameLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tvEditProfileNameLabel"
        app:layout_constraintLeft_toLeftOf="@+id/ivEditProfile"
        app:layout_constraintTop_toBottomOf="@+id/ivEditProfile"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tvEditProfileLocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEditProfileEmailLabel"
        android:layout_alignStart="@+id/tvEditProfileEmailLabel"
        android:layout_below="@+id/etEditProfileEmail"
        android:layout_weight="0.13"
        android:text="@string/Location_colon"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="Location"
        app:layout_constraintRight_toRightOf="@+id/tvEditProfileNameLabel"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="-151dp"
        app:layout_constraintTop_toBottomOf="@+id/etEditProfileName"
        android:layout_marginRight="-16dp" />

    <TextView
        android:id="@+id/tvEditProfileEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etEditProfileEmail"
        android:layout_alignBottom="@+id/etEditProfileEmail"
        android:layout_alignEnd="@+id/tvEditProfileNameLabel"
        android:layout_alignRight="@+id/tvEditProfileNameLabel"
        android:layout_weight="0.13"
        android:text="@string/email"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="Email"
        app:layout_constraintRight_toRightOf="@+id/tvEditProfileLocationLabel"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="-151dp"
        app:layout_constraintTop_toBottomOf="@+id/etEditProfileLocation"
        android:layout_marginRight="-16dp" />

    <EditText
        android:id="@+id/etEditProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignLeft="@+id/etEditProfileName"
        android:layout_alignStart="@+id/etEditProfileName"
        android:layout_below="@+id/etEditProfileName"
        android:ems="10"
        android:hint="@string/e_mail_address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/tvEditProfileEmailLabel"
        app:layout_constraintTop_toTopOf="@+id/tvEditProfileEmailLabel"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/etEditProfileLocation"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/etEditProfileLocation"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etEditProfileLocation"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignBottom="@+id/tvEditProfileLocationLabel"
        android:layout_alignEnd="@+id/etEditProfileEmail"
        android:layout_alignRight="@+id/etEditProfileEmail"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tvEditProfileLocationLabel"
        app:layout_constraintTop_toTopOf="@+id/tvEditProfileLocationLabel"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/etEditProfileName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/etEditProfileName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/buttonEditProfileBackToProfile"
        android:layout_width="67dp"
        android:layout_height="38dp"
        android:layout_below="@+id/buttonEditProfileEditProfile"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/exit"
        android:visibility="visible"
        app:bootstrapBrand="primary"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:roundedCorners="true"
        app:showOutline="false"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonEditProfileEditProfile"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="28dp"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintVertical_bias="0.0" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/buttonEditProfileEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivEditProfile"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/save"
        android:visibility="visible"
        app:bootstrapBrand="primary"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:roundedCorners="true"
        app:showOutline="false"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="-128dp"
        app:layout_constraintTop_toBottomOf="@+id/etEditProfileEmail"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintHorizontal_bias="0.557" />

    <ImageView
        android:id="@+id/ivEditProfile"
        android:layout_width="145dp"
        android:layout_height="132dp"
        android:layout_alignLeft="@+id/buttonEditProfileBackToProfile"
        android:layout_alignStart="@+id/buttonEditProfileBackToProfile"
        android:layout_below="@+id/tvEditProfileLocationLabel"
        android:adjustViewBounds="true"
        android:src="@drawable/add_image_icon"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        android:visibility="visible"
        tools:ignore="ContentDescription"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="-170dp"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.576" />

</android.support.constraint.ConstraintLayout>
