<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/tvMyProfileEmailLabel"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:text="@string/email"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/tvMyProfileNameLabel"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/tvMyProfileNameLabel"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="31dp"
        app:layout_constraintTop_toTopOf="@+id/tvMyProfileUserIDLabel"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvMyProfileUserIDLabel"
        android:layout_width="100dp"
        android:layout_height="19dp"
        android:text="@string/user_id"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/tvMyProfileEmailLabel"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/tvMyProfileLocationLabel"
        android:layout_marginTop="86dp"
        app:layout_constraintTop_toBottomOf="@+id/ivMyProfileImage"
        android:layout_marginBottom="88dp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvMyProfileNameLabel"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:text="@string/your_name_colon"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/tvMyProfileLocationLabel"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="171dp" />

    <TextView
        android:id="@+id/tvMyProfileName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tvMyProfileLocation"
        app:layout_constraintTop_toTopOf="@+id/tvMyProfileNameLabel"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="1dp" />

    <TextView
        android:id="@+id/tvMyProfileLocationLabel"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:text="@string/your_location"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/tvMyProfileNameLabel"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tvMyProfileLocation"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/tvMyProfileLocationLabel"
        android:layout_marginStart="36dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/tvMyProfileLocationLabel"
        android:layout_marginLeft="36dp" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvMyProfileUserID"
        app:layout_constraintLeft_toLeftOf="@+id/tvMyProfileUserEmail"
        app:layout_constraintTop_toTopOf="@+id/tvMyProfileUserIDLabel" />

    <TextView
        android:id="@+id/tvMyProfileUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tvMyProfileName"
        app:layout_constraintTop_toTopOf="@+id/tvMyProfileEmailLabel" />

    <ImageView
        android:id="@+id/ivMyProfileImage"
        android:layout_width="161dp"
        android:layout_height="167dp"
        android:src="@android:drawable/ic_menu_gallery"
        android:contentDescription="Profile Picture"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.282" />

</android.support.constraint.ConstraintLayout>